--- a/articles.html
+++ b/articles.html
@@ -1,37 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <meta name="author" content="Elisa Stenberg" />
 
-    <title>Elisan blogi</title>
-    <style>
-      article p{
-        white-space: normal;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
+  <meta name="description" content="" />
+  <meta name="keywords" content="" />
+  <meta name="author" content="Elisa Stenberg" />
 
-    </style>
-  </head>
-  <body id="article-details">
-    <header class="w3-container w3-center w3-padding-32 w3-text-white">
-      <h1>
-        <a href="index.html"> <strong>Elisan Antologia</strong></a>
-      </h1>
-      <p>Tervetuloa <span class="w3-tag">Elisan Stenbergin</span> blogiin</p>
-    </header>
-    <main>
-      <script id="template" type="text/x-handlebars-template">
+  <title>Elisan blogi</title>
+  <style>
+    article p {
+      white-space: normal;
+    }
+  </style>
+</head>
+
+<body id="article-details">
+  <header class="w3-container w3-center w3-padding-32 w3-text-white">
+    <h1>
+      <a href="index.html"> <strong>Elisan Antologia</strong></a>
+    </h1>
+    <p>Tervetuloa <span class="w3-tag">Elisan Stenbergin</span> blogiin</p>
+  </header>
+  <main>
+    <script id="template" type="text/x-handlebars-template">
         <article class="w3-card-4 w3-margin w3-white">
           <img
             src="assets/{{imgSrc}}"
@@ -40,7 +38,7 @@
             width="100%"
             height="300px"
           />
-
+          <a class="a2a_dd w3-margin-left w3-text-blue" href="https://www.addtoany.com/share">Share</a>
           <h2 class="w3-container">
             <strong>
               {{title}}
@@ -48,22 +46,23 @@
           </h2>
 
           <p class="w3-container" >
-            {{text}}
+            {{{text}}}
           </p>
         </article>
       </script>
-    </main>
-    <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
-      <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-title="Elisa blogi"
-        data-a2a-url="https://panagiotis.netlify.app">
-        <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
-        <a class="a2a_button_facebook"></a>
-        <a class="a2a_button_facebook_messenger"></a>
-        <a class="a2a_button_whatsapp"></a>
-      </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
-    <script src="assets/articles.js"></script>
-    <script src="main.js"></script>
-  </body>
+  </main>
+  <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
+    <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-title="Elisa blogi" data-a2a-url=` ${shareUrl} `>
+      <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
+      <a class="a2a_button_facebook"></a>
+      <a class="a2a_button_facebook_messenger"></a>
+      <a class="a2a_button_whatsapp"></a>
+    </div>
+  </footer>
+  <script async defer src="https://static.addtoany.com/menu/page.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+  <script src="assets/articles.js"></script>
+  <script src="main.js"></script>
+</body>
+
 </html>
