--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                   <img oncontextmenu="false"
                       src="assets/{{imgSrc}}"
                       alt="Book's cover"
-                      width="300px"
-                      height="500px"
+                      width="300"
+                      height="500"
                   srcset="assets/{{imgSrc}}, assets/{{imageSmall}} 540w" sizes="100vw"
                 />
                   <figcaption class="w3-display-bottomright w3-tag">
@@ -101,7 +101,7 @@
       <!-- About Card -->
       <div class="w3-card w3-margin w3-margin-top w3-sand">
         <img class="w3-circle w3-margin" id="profilePhoto" src="./assets/profileSmaller.webp"
-          alt="Elisa Stenberg, profile photo" width="100px" height="250px" oncontextmenu="false" loading="lazy" />
+          alt="Elisa Stenberg, profile photo" width="100" height="250" oncontextmenu="false" loading="lazy" />
         <div class="w3-container w3-sand">
           <h4><strong>Elisa Stenberg</strong></h4>
           <p>
@@ -140,8 +140,8 @@
                       alt="Image"
                       class="w3-left w3-margin-right w3-image"
                       loading="lazy"
-                      width="100px"
-                      height="250px"
+                      width="100"
+                      height="250"
                       oncontextmenu="false"
                     />
                     <h3 class="w3-large">
