--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           {{#each writings}}
             {{#if @last}}
               <article class="w3-card-4 w3-margin w3-sand w3-round">
-                <h2 class="w3-padding w3-light-gray w3-round">
+                <h2 class="w3-padding w3-round">
                   <strong>
                     Viimeisin merkintä
                   </strong>
@@ -62,7 +62,7 @@
                       alt="Book's cover"
                       width="300"
                       height="500"
-                  srcset="assets/{{imgSrc}}, assets/{{imageSmall}} 540w" sizes="100vw"
+                  srcset="assets/{{imgSrc}}, assets/{{imageSmall}} 540w, assets/{{safari}} 1000w "
                 />
                   <figcaption class="w3-display-bottomright w3-tag">
                     {{imageComment}}
@@ -74,9 +74,9 @@
                   </h3>
                 </div>
                 <div class="w3-container">
-                  <p>
+                  <a href="{{link}}" target="_blank" class="w3-text-purple">
                     {{description}}
-                  </p>
+                  </a>
                   <div class="w3-row">
                     <div class="w3-col m8 s12">
                       <a
@@ -147,7 +147,8 @@
                     <h3 class="w3-large">
                       {{title}}
                     </h3>
-                  </a>
+                   
+                  </a> <!-- <p class="w3-inline">{{date}} </p> -->
                 </li>
               {{/each}}
             </script>
