--- a/index.html
+++ b/index.html
@@ -71,13 +71,6 @@
                       height="500"
                     />
                   </picture>
-                  <!-- <img oncontextmenu="false"
-                      src="assets/{{imgSrc}}"
-                      alt="Book's cover"
-                      width="300"
-                      height="500"
-                  srcset="assets/{{imgSrc}}, assets/{{imageSmall}} 540w"
-                /> -->
                   <figcaption class="w3-display-bottomright w3-tag">
                     {{imageComment}}
                   </figcaption>
@@ -114,8 +107,15 @@
     <section class="w3-col l4">
       <!-- About Card -->
       <div class="w3-card w3-margin w3-margin-top w3-sand">
-        <img class="w3-circle w3-margin" id="profilePhoto" src="./assets/profileSmaller.webp"
+        <picture>
+          <source
+            srcset="./assets/profileSmaller.webp"
+            type="image/webp"
+          />
+          <source srcset="./assets/profileSmaller.jpg" type="image/jpeg" />
+          <img class="w3-circle w3-margin" id="profilePhoto" src="./assets/profileSmaller.webp"
           alt="Elisa Stenberg, profile photo" width="100" height="250" oncontextmenu="false" loading="lazy" />
+        </picture>
         <div class="w3-container w3-sand">
           <h4><strong>Elisa Stenberg</strong></h4>
           <p>
